@@ -1,14 +1,13 @@
 class SearchController < ApplicationController
 
   def index
-    search_params = params[:court_search] || {}
 
-    if search_params[:area_of_law] == 'Designated money claims'
+    if params[:area_of_law] == 'Designated money claims'
       redirect_to(court_path('county-court-money-claims-centre'))
       return
     end
 
-    @search = SearchForm.new(search_params)
+    @search = SearchForm.new(params)
     @results = []
 
     if @search.valid?
